--- a/media/css/header.css
+++ b/media/css/header.css
@@ -14,24 +14,28 @@ h1 {
   display: inline-block;
   text-transform: uppercase;
   font-family: 'Arvil Sans', Arial;
+  background: #406c99;
+  padding: 25px 75px;
 }
-/* line 12, ../scss/header.scss */
+/* line 15, ../scss/header.scss */
 h1 strong {
   font-size: 1.5em;
   font-weight: normal;
-  color: #404041;
+  color: #fff;
   letter-spacing: 8px;
+  z-index: 1;
+  position: relative;
 }
-/* line 18, ../scss/header.scss */
-h1 strong:before {
+/* line 23, ../scss/header.scss */
+h1 strong:after {
   text-transform: uppercase;
   content: 'Skeyler';
   position: absolute;
-  -webkit-transform: scaleY(0.4) skewX(-20deg) translateX(-6px) translateY(-6px);
-  -moz-transform: scaleY(0.4) skewX(-20deg) translateX(-6px) translateY(-6px);
-  -ms-transform: scaleY(0.4) skewX(-20deg) translateX(-6px) translateY(-6px);
-  -o-transform: scaleY(0.4) skewX(-20deg) translateX(-6px) translateY(-6px);
-  transform: scaleY(0.4) skewX(-20deg) translateX(-6px) translateY(-6px);
+  -webkit-transform: scaleY(0.36) skewX(-15deg) translateX(-4px) translateY(-9px);
+  -moz-transform: scaleY(0.36) skewX(-15deg) translateX(-4px) translateY(-9px);
+  -ms-transform: scaleY(0.36) skewX(-15deg) translateX(-4px) translateY(-9px);
+  -o-transform: scaleY(0.36) skewX(-15deg) translateX(-4px) translateY(-9px);
+  transform: scaleY(0.36) skewX(-15deg) translateX(-4px) translateY(-9px);
   -webkit-transform-origin: 50% 100%;
   -moz-transform-origin: 50% 100%;
   -ms-transform-origin: 50% 100%;
@@ -43,8 +47,9 @@ h1 strong:before {
   color: rgba(0, 0, 0, 0.2);
   text-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
   z-index: -1;
+  left: 0;
 }
-/* line 36, ../scss/header.scss */
+/* line 42, ../scss/header.scss */
 h1 span {
   line-height: 1;
   font-size: .4em;
@@ -53,14 +58,15 @@ h1 span {
   font-style: italic;
   color: #808284;
   vertical-align: top;
+  display: none;
 }
-/* line 45, ../scss/header.scss */
+/* line 53, ../scss/header.scss */
 h1 span em {
   color: #67bd38;
   font-weight: bold;
   vertical-align: top;
 }
-/* line 52, ../scss/header.scss */
+/* line 60, ../scss/header.scss */
 h1 span:before {
   content: '\a';
   display: block;
@@ -69,7 +75,7 @@ h1 span:before {
   font-size: 1px;
 }
 
-/* line 62, ../scss/header.scss */
+/* line 70, ../scss/header.scss */
 ul.topNav {
   display: inline-block;
   padding: 0;
@@ -77,37 +83,33 @@ ul.topNav {
   list-style: none;
   float: right;
 }
-/* line 69, ../scss/header.scss */
+/* line 77, ../scss/header.scss */
 ul.topNav li {
   display: inline-block;
-}
-/* line 72, ../scss/header.scss */
-ul.topNav li a {
-  display: inline-block;
-  padding: 0.5em 1em;
-  color: #646464;
-  text-decoration: none;
-  font-family: Arial;
-  -webkit-border-radius: 0.5em;
-  -moz-border-radius: 0.5em;
-  -ms-border-radius: 0.5em;
-  -o-border-radius: 0.5em;
-  border-radius: 0.5em;
+  font-weight: bold;
 }
 /* line 81, ../scss/header.scss */
+ul.topNav li a {
+  display: inline-block;
+  padding: 0 1em;
+  color: #fff;
+  text-decoration: none;
+  font-family: Arial;
+  line-height: 38px;
+}
+/* line 91, ../scss/header.scss */
 ul.topNav li.selected a {
-  background: #42474a;
-  color: #f2f2f2;
+  background: #84a0bc;
 }
 
-/* line 88, ../scss/header.scss */
+/* line 98, ../scss/header.scss */
 ul.subNav {
   list-style: none;
   display: inline-block;
   padding: 0;
   margin: 0;
 }
-/* line 94, ../scss/header.scss */
+/* line 104, ../scss/header.scss */
 ul.subNav li {
   display: inline-block;
   font-size: 0.75em;
@@ -125,48 +127,48 @@ ul.subNav li {
   -o-border-radius: 0.5em 0.5em 0 0;
   border-radius: 0.5em 0.5em 0 0;
 }
-/* line 103, ../scss/header.scss */
+/* line 113, ../scss/header.scss */
 ul.subNav li a {
   display: inline-block;
   color: #6f6f6f;
   padding: 6px 16px 6px 16px;
   text-decoration: none;
 }
-/* line 111, ../scss/header.scss */
+/* line 121, ../scss/header.scss */
 ul.subNav li.selected {
   position: relative;
   top: 1px;
   background: #fff;
 }
-/* line 116, ../scss/header.scss */
+/* line 126, ../scss/header.scss */
 ul.subNav li.selected a {
   padding-top: 10px;
   position: relative;
   top: -1px;
 }
 
-/* line 126, ../scss/header.scss */
+/* line 136, ../scss/header.scss */
 ul.breadcrumbs {
   display: inline-block;
   list-style: none;
   padding: 0;
   margin: 0;
 }
-/* line 132, ../scss/header.scss */
+/* line 142, ../scss/header.scss */
 ul.breadcrumbs li {
   display: inline-block;
   font-size: 0.85em;
 }
-/* line 136, ../scss/header.scss */
+/* line 146, ../scss/header.scss */
 ul.breadcrumbs li a {
   color: #767676;
 }
-/* line 141, ../scss/header.scss */
+/* line 151, ../scss/header.scss */
 ul.breadcrumbs li ~ li:before {
   content: ' > ';
 }
 
-/* line 146, ../scss/header.scss */
+/* line 156, ../scss/header.scss */
 ul.welcome {
   float: right;
   display: inline-block;
@@ -174,25 +176,25 @@ ul.welcome {
   padding: 0;
   font-size: 0.85em;
 }
-/* line 153, ../scss/header.scss */
+/* line 163, ../scss/header.scss */
 ul.welcome li {
   display: inline-block;
 }
-/* line 156, ../scss/header.scss */
+/* line 166, ../scss/header.scss */
 ul.welcome li a {
   color: #545d63;
   margin: 0 0.25em;
   font-weight: bold;
 }
-/* line 163, ../scss/header.scss */
+/* line 173, ../scss/header.scss */
 ul.welcome li + li ~ li:before {
   content: ' | ';
 }
-/* line 167, ../scss/header.scss */
+/* line 177, ../scss/header.scss */
 ul.welcome li:first-child {
   margin-right: 1.5em;
 }
-/* line 171, ../scss/header.scss */
+/* line 181, ../scss/header.scss */
 ul.welcome .avatar {
   vertical-align: middle;
   height: 16px;
@@ -200,7 +202,7 @@ ul.welcome .avatar {
   margin-right: 4px;
 }
 
-/* line 181, ../scss/header.scss */
+/* line 191, ../scss/header.scss */
 h2 {
   color: #565656;
   font-family: Arial;
