--- a/media/css/main.css
+++ b/media/css/main.css
@@ -18,23 +18,35 @@ body {
   background: -moz-radial-gradient(#ffffff, rgba(255, 255, 255, 0)) #c3c3c3;
   background: -o-radial-gradient(#ffffff, rgba(255, 255, 255, 0)) #c3c3c3;
   background: radial-gradient(#ffffff, rgba(255, 255, 255, 0)) #c3c3c3;
-  padding-top: 50px;
+  padding: 0;
 }
 
-/* line 11, ../scss/main.scss */
+/* line 13, ../scss/main.scss */
 #container {
   width: 900px;
   margin: 0 auto;
   text-align: left;
 }
-
 /* line 18, ../scss/main.scss */
+#container:before {
+  content: '';
+  display: block;
+  background: #406c99;
+  height: 38px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
+
+/* line 31, ../scss/main.scss */
 .alert {
   padding: 0.5em 1em;
   margin-bottom: 1em;
 }
 
-/* line 23, ../scss/main.scss */
+/* line 36, ../scss/main.scss */
 .content {
   background: #fff;
   border: 1px solid #dfdfdf;
@@ -46,22 +58,22 @@ body {
   border-radius: 0 0.5em 0 0;
 }
 
-/* line 31, ../scss/main.scss */
+/* line 44, ../scss/main.scss */
 .clr {
   clear: both;
 }
 
-/* line 35, ../scss/main.scss */
+/* line 48, ../scss/main.scss */
 h2 {
   padding: 0;
   margin: 0;
 }
-/* line 39, ../scss/main.scss */
+/* line 52, ../scss/main.scss */
 h2 a {
   color: #767676;
 }
 
-/* line 44, ../scss/main.scss */
+/* line 57, ../scss/main.scss */
 ul.pageNav {
   display: inline-block;
   background: #3d628c;
@@ -77,37 +89,37 @@ ul.pageNav {
   margin: 0;
   padding: 0;
 }
-/* line 55, ../scss/main.scss */
+/* line 68, ../scss/main.scss */
 ul.pageNav.right {
   float: right;
 }
-/* line 59, ../scss/main.scss */
+/* line 72, ../scss/main.scss */
 ul.pageNav li {
   display: inline-block;
 }
-/* line 62, ../scss/main.scss */
+/* line 75, ../scss/main.scss */
 ul.pageNav li a {
   display: inline-block;
   background: #fff;
 }
-/* line 67, ../scss/main.scss */
+/* line 80, ../scss/main.scss */
 ul.pageNav li a, ul.pageNav li span {
   padding: 0.25em 0.5em;
 }
-/* line 71, ../scss/main.scss */
+/* line 84, ../scss/main.scss */
 ul.pageNav li.firstPage a:before {
   content: '<< ';
 }
-/* line 74, ../scss/main.scss */
+/* line 87, ../scss/main.scss */
 ul.pageNav li.lastPage a:after {
   content: ' >>';
 }
-/* line 78, ../scss/main.scss */
+/* line 91, ../scss/main.scss */
 ul.pageNav li.curPage a {
   background: #3d628c;
   color: #d5d5d5;
 }
-/* line 83, ../scss/main.scss */
+/* line 96, ../scss/main.scss */
 ul.pageNav li:last-child a {
   -webkit-border-radius: 0 0.125em 0 0;
   -moz-border-radius: 0 0.125em 0 0;
@@ -115,7 +127,7 @@ ul.pageNav li:last-child a {
   -o-border-radius: 0 0.125em 0 0;
   border-radius: 0 0.125em 0 0;
 }
-/* line 88, ../scss/main.scss */
+/* line 101, ../scss/main.scss */
 ul.pageNav.bottom {
   -webkit-border-radius: 0 0 0.25em 0.25em;
   -moz-border-radius: 0 0 0.25em 0.25em;
@@ -125,7 +137,7 @@ ul.pageNav.bottom {
   border: 1px solid #3d628c;
   border-top: none;
 }
-/* line 93, ../scss/main.scss */
+/* line 106, ../scss/main.scss */
 ul.pageNav.bottom li:last-child a {
   -webkit-border-radius: 0 0 0.125em 0;
   -moz-border-radius: 0 0 0.125em 0;
@@ -134,7 +146,7 @@ ul.pageNav.bottom li:last-child a {
   border-radius: 0 0 0.125em 0;
 }
 
-/* line 102, ../scss/main.scss */
+/* line 115, ../scss/main.scss */
 .tag-vip:before {
   content: url("../images/tags/vip.png") " ";
   display: inline-block;
@@ -142,7 +154,7 @@ ul.pageNav.bottom li:last-child a {
   vertical-align: middle;
 }
 
-/* line 102, ../scss/main.scss */
+/* line 115, ../scss/main.scss */
 .tag-mod:before {
   content: url("../images/tags/mod.png") " ";
   display: inline-block;
@@ -150,7 +162,7 @@ ul.pageNav.bottom li:last-child a {
   vertical-align: middle;
 }
 
-/* line 102, ../scss/main.scss */
+/* line 115, ../scss/main.scss */
 .tag-admin:before {
   content: url("../images/tags/admin.png") " ";
   display: inline-block;
@@ -158,7 +170,7 @@ ul.pageNav.bottom li:last-child a {
   vertical-align: middle;
 }
 
-/* line 102, ../scss/main.scss */
+/* line 115, ../scss/main.scss */
 .tag-dev:before {
   content: url("../images/tags/dev.png") " ";
   display: inline-block;
@@ -166,7 +178,7 @@ ul.pageNav.bottom li:last-child a {
   vertical-align: middle;
 }
 
-/* line 102, ../scss/main.scss */
+/* line 115, ../scss/main.scss */
 .tag-super:before {
   content: url("../images/tags/super.png") " ";
   display: inline-block;
@@ -174,7 +186,7 @@ ul.pageNav.bottom li:last-child a {
   vertical-align: middle;
 }
 
-/* line 102, ../scss/main.scss */
+/* line 115, ../scss/main.scss */
 .tag-owner:before {
   content: url("../images/tags/owner.png") " ";
   display: inline-block;
@@ -182,7 +194,7 @@ ul.pageNav.bottom li:last-child a {
   vertical-align: middle;
 }
 
-/* line 112, ../scss/main.scss */
+/* line 125, ../scss/main.scss */
 #chatbox .chats {
   font-size: 0.75em;
   border: 1px solid #d8d8d8;
@@ -198,12 +210,12 @@ ul.pageNav.bottom li:last-child a {
   overflow-x: hidden;
   background: #fff;
 }
-/* line 125, ../scss/main.scss */
+/* line 138, ../scss/main.scss */
 #chatbox .chat a.userLink:before {
   line-height: 1.0;
   vertical-align: middle;
 }
-/* line 130, ../scss/main.scss */
+/* line 143, ../scss/main.scss */
 #chatbox input {
   width: 100%;
   border: 1px solid #d8d8d8;
@@ -218,7 +230,7 @@ ul.pageNav.bottom li:last-child a {
   border-radius: 0 0 0.5em 0.5em;
 }
 
-/* line 141, ../scss/main.scss */
+/* line 154, ../scss/main.scss */
 .missing42 {
   width: 42px;
   height: 42px;
@@ -226,7 +238,7 @@ ul.pageNav.bottom li:last-child a {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==") no-repeat;
 }
 
-/* line 147, ../scss/main.scss */
+/* line 161, ../scss/main.scss */
 .missing52 {
   width: 42px;
   height: 42px;
@@ -234,12 +246,12 @@ ul.pageNav.bottom li:last-child a {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0AQMAAAD/tomoAAAABlBMVEX4APgAAAAfdBzzAAAAKUlEQVR4Xt3PQQkAAAjAwIEBjGR1IxlAUEvoQxjce6DlUrHmZAlXfvtpTQiymQ2xdWAAAAAASUVORK5CYII=") no-repeat;
 }
 
-/* line 154, ../scss/main.scss */
+/* line 168, ../scss/main.scss */
 .modDropdown {
   display: inline-block;
   position: relative;
 }
-/* line 158, ../scss/main.scss */
+/* line 172, ../scss/main.scss */
 .modDropdown .star {
   width: 16px;
   height: 16px;
@@ -266,7 +278,7 @@ ul.pageNav.bottom li:last-child a {
   -o-animation-direction: alternate;
   animation-direction: alternate;
 }
-/* line 172, ../scss/main.scss */
+/* line 186, ../scss/main.scss */
 .modDropdown ul {
   display: none;
   position: absolute;
@@ -280,13 +292,13 @@ ul.pageNav.bottom li:last-child a {
   background: #eee;
   border: 1px solid #000;
 }
-/* line 186, ../scss/main.scss */
+/* line 200, ../scss/main.scss */
 .modDropdown ul li a {
   display: block;
   white-space: pre;
   padding: 0 4px;
 }
-/* line 191, ../scss/main.scss */
+/* line 205, ../scss/main.scss */
 .modDropdown ul li ~ li {
   border-top: 1px solid #000;
 }
@@ -297,13 +309,13 @@ ul.pageNav.bottom li:last-child a {
 @-ms-keyframes evilPulse {}
 @keyframes evilPulse {}
 @-moz-keyframes evilRotate {
-  /* line 212, ../scss/main.scss */
+  /* line 226, ../scss/main.scss */
   from {
     -moz-transform: rotate(10deg);
     transform: rotate(10deg);
   }
 
-  /* line 215, ../scss/main.scss */
+  /* line 229, ../scss/main.scss */
   to {
     -moz-transform: rotate(-10deg);
     transform: rotate(-10deg);
@@ -311,13 +323,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-webkit-keyframes evilRotate {
-  /* line 212, ../scss/main.scss */
+  /* line 226, ../scss/main.scss */
   from {
     -webkit-transform: rotate(10deg);
     transform: rotate(10deg);
   }
 
-  /* line 215, ../scss/main.scss */
+  /* line 229, ../scss/main.scss */
   to {
     -webkit-transform: rotate(-10deg);
     transform: rotate(-10deg);
@@ -325,13 +337,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-o-keyframes evilRotate {
-  /* line 212, ../scss/main.scss */
+  /* line 226, ../scss/main.scss */
   from {
     -o-transform: rotate(10deg);
     transform: rotate(10deg);
   }
 
-  /* line 215, ../scss/main.scss */
+  /* line 229, ../scss/main.scss */
   to {
     -o-transform: rotate(-10deg);
     transform: rotate(-10deg);
@@ -339,13 +351,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-ms-keyframes evilRotate {
-  /* line 212, ../scss/main.scss */
+  /* line 226, ../scss/main.scss */
   from {
     -ms-transform: rotate(10deg);
     transform: rotate(10deg);
   }
 
-  /* line 215, ../scss/main.scss */
+  /* line 229, ../scss/main.scss */
   to {
     -ms-transform: rotate(-10deg);
     transform: rotate(-10deg);
@@ -353,18 +365,18 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @keyframes evilRotate {
-  /* line 212, ../scss/main.scss */
+  /* line 226, ../scss/main.scss */
   from {
     transform: rotate(10deg);
   }
 
-  /* line 215, ../scss/main.scss */
+  /* line 229, ../scss/main.scss */
   to {
     transform: rotate(-10deg);
   }
 }
 
-/* line 220, ../scss/main.scss */
+/* line 234, ../scss/main.scss */
 .popupContainer {
   text-align: center;
   position: fixed;
@@ -377,7 +389,7 @@ ul.pageNav.bottom li:last-child a {
   z-index: 9998;
 }
 
-/* line 232, ../scss/main.scss */
+/* line 246, ../scss/main.scss */
 .popup {
   padding: 1em;
   width: 80%;
