slight color change

--- a/media/css/header.css
+++ b/media/css/header.css
@@ -14,7 +14,7 @@ h1 {
   display: inline-block;
   text-transform: uppercase;
   font-family: 'Arvil Sans', Arial;
-  background: #406c99;
+  background: #3d658f;
   padding: 25px 75px;
 }
 /* line 15, ../scss/header.scss */
