--- a/media/scss/header.scss
+++ b/media/scss/header.scss
@@ -9,7 +9,7 @@ h1 {
   text-transform: uppercase;
   font-family: 'Arvil Sans', Arial;
 
-  background: #406c99;
+  background: #3d658f;
   padding: 25px 75px;
 
   strong {
