--- a/media/scss/threads.scss
+++ b/media/scss/threads.scss
@@ -48,7 +48,7 @@
   width: 142px;
   display: inline-block;
   background: #e7e7e7;
-  padding: 0 12px 0 6px;
+  padding: 0 12px 4px 6px;
 
   .postTime {
     font-size: 0.75em;
@@ -60,6 +60,7 @@
     width: 115px;
     height: 115px;
     border: 3px solid #93abbd;
+    display: inline-block;
     @include border-radius(0.5em);
   }
 
