--- a/media/css/header.css
+++ b/media/css/header.css
@@ -10,14 +10,18 @@ h1 {
   vertical-align: top;
   padding: 0 0 0 80px;
   margin: 0 0 32px 0;
-  background: url(../images/logo.png) left 8px no-repeat;
   display: inline-block;
   text-transform: uppercase;
   font-family: 'Arvil Sans', Arial;
   background: #3d658f;
   padding: 25px 75px;
+  -webkit-border-radius: 0 0 0.25em 0.25em;
+  -moz-border-radius: 0 0 0.25em 0.25em;
+  -ms-border-radius: 0 0 0.25em 0.25em;
+  -o-border-radius: 0 0 0.25em 0.25em;
+  border-radius: 0 0 0.25em 0.25em;
 }
-/* line 15, ../scss/header.scss */
+/* line 16, ../scss/header.scss */
 h1 strong {
   font-size: 1.5em;
   font-weight: normal;
@@ -26,7 +30,7 @@ h1 strong {
   z-index: 1;
   position: relative;
 }
-/* line 23, ../scss/header.scss */
+/* line 24, ../scss/header.scss */
 h1 strong:after {
   text-transform: uppercase;
   content: 'Skeyler';
@@ -49,7 +53,7 @@ h1 strong:after {
   z-index: -1;
   left: 0;
 }
-/* line 42, ../scss/header.scss */
+/* line 43, ../scss/header.scss */
 h1 span {
   line-height: 1;
   font-size: .4em;
@@ -60,13 +64,13 @@ h1 span {
   vertical-align: top;
   display: none;
 }
-/* line 53, ../scss/header.scss */
+/* line 54, ../scss/header.scss */
 h1 span em {
   color: #67bd38;
   font-weight: bold;
   vertical-align: top;
 }
-/* line 60, ../scss/header.scss */
+/* line 61, ../scss/header.scss */
 h1 span:before {
   content: '\a';
   display: block;
@@ -75,7 +79,7 @@ h1 span:before {
   font-size: 1px;
 }
 
-/* line 70, ../scss/header.scss */
+/* line 71, ../scss/header.scss */
 ul.topNav {
   display: inline-block;
   padding: 0;
@@ -83,12 +87,12 @@ ul.topNav {
   list-style: none;
   float: right;
 }
-/* line 77, ../scss/header.scss */
+/* line 78, ../scss/header.scss */
 ul.topNav li {
   display: inline-block;
   font-weight: bold;
 }
-/* line 81, ../scss/header.scss */
+/* line 82, ../scss/header.scss */
 ul.topNav li a {
   display: inline-block;
   padding: 0 1em;
@@ -97,19 +101,19 @@ ul.topNav li a {
   font-family: Arial;
   line-height: 38px;
 }
-/* line 91, ../scss/header.scss */
+/* line 92, ../scss/header.scss */
 ul.topNav li.selected a {
   background: #84a0bc;
 }
 
-/* line 98, ../scss/header.scss */
+/* line 99, ../scss/header.scss */
 ul.subNav {
   list-style: none;
   display: inline-block;
   padding: 0;
   margin: 0;
 }
-/* line 104, ../scss/header.scss */
+/* line 105, ../scss/header.scss */
 ul.subNav li {
   display: inline-block;
   font-size: 0.75em;
@@ -127,48 +131,48 @@ ul.subNav li {
   -o-border-radius: 0.5em 0.5em 0 0;
   border-radius: 0.5em 0.5em 0 0;
 }
-/* line 113, ../scss/header.scss */
+/* line 114, ../scss/header.scss */
 ul.subNav li a {
   display: inline-block;
   color: #6f6f6f;
   padding: 6px 16px 6px 16px;
   text-decoration: none;
 }
-/* line 121, ../scss/header.scss */
+/* line 122, ../scss/header.scss */
 ul.subNav li.selected {
   position: relative;
   top: 1px;
   background: #fff;
 }
-/* line 126, ../scss/header.scss */
+/* line 127, ../scss/header.scss */
 ul.subNav li.selected a {
   padding-top: 10px;
   position: relative;
   top: -1px;
 }
 
-/* line 136, ../scss/header.scss */
+/* line 137, ../scss/header.scss */
 ul.breadcrumbs {
   display: inline-block;
   list-style: none;
   padding: 0;
   margin: 0;
 }
-/* line 142, ../scss/header.scss */
+/* line 143, ../scss/header.scss */
 ul.breadcrumbs li {
   display: inline-block;
   font-size: 0.85em;
 }
-/* line 146, ../scss/header.scss */
+/* line 147, ../scss/header.scss */
 ul.breadcrumbs li a {
   color: #767676;
 }
-/* line 151, ../scss/header.scss */
+/* line 152, ../scss/header.scss */
 ul.breadcrumbs li ~ li:before {
   content: ' > ';
 }
 
-/* line 156, ../scss/header.scss */
+/* line 157, ../scss/header.scss */
 ul.welcome {
   float: right;
   display: inline-block;
@@ -176,25 +180,25 @@ ul.welcome {
   padding: 0;
   font-size: 0.85em;
 }
-/* line 163, ../scss/header.scss */
+/* line 164, ../scss/header.scss */
 ul.welcome li {
   display: inline-block;
 }
-/* line 166, ../scss/header.scss */
+/* line 167, ../scss/header.scss */
 ul.welcome li a {
   color: #545d63;
   margin: 0 0.25em;
   font-weight: bold;
 }
-/* line 173, ../scss/header.scss */
+/* line 174, ../scss/header.scss */
 ul.welcome li + li ~ li:before {
   content: ' | ';
 }
-/* line 177, ../scss/header.scss */
+/* line 178, ../scss/header.scss */
 ul.welcome li:first-child {
   margin-right: 1.5em;
 }
-/* line 181, ../scss/header.scss */
+/* line 182, ../scss/header.scss */
 ul.welcome .avatar {
   vertical-align: middle;
   height: 16px;
@@ -202,7 +206,7 @@ ul.welcome .avatar {
   margin-right: 4px;
 }
 
-/* line 191, ../scss/header.scss */
+/* line 192, ../scss/header.scss */
 h2 {
   color: #565656;
   font-family: Arial;
