--- a/media/scss/header.scss
+++ b/media/scss/header.scss
@@ -4,13 +4,14 @@ h1 {
   vertical-align: top;
   padding: 0 0 0 80px;
   margin: 0 0 32px 0;
-  background: url(../images/logo.png) left 8px no-repeat;
+  //background: url(../images/logo.png) left 8px no-repeat;
   display: inline-block;
   text-transform: uppercase;
   font-family: 'Arvil Sans', Arial;
 
   background: #3d658f;
   padding: 25px 75px;
+  @include border-radius(0 0 0.25em 0.25em);
 
   strong {
     font-size: 1.5em;
