--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -269,3 +269,11 @@ $tags: (vip, mod, admin, dev, super, owner);
   top: 100px;
   background: #eee;
 }
+
+table {
+  width: 100%;
+
+  td {
+    text-align: center;
+  }
+}
