--- a/media/css/servers.css
+++ b/media/css/servers.css
@@ -8,7 +8,7 @@
 /* line 6, ../scss/servers.scss */
 .server {
   padding: 3px;
-  margin: 1em 0;
+  margin: 1em 0 2em 0;
   background: #fff;
   -webkit-box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
@@ -61,25 +61,26 @@
   color: #fff;
   background: #3d658f;
   font-family: 'Arvil Sans', Arial;
-  font-size: 1.5em;
-  padding: 0.25em 2em;
+  font-size: 1.7em;
+  padding: 0.125em 1em;
   -webkit-border-radius: 0.25em;
   -moz-border-radius: 0.25em;
   -ms-border-radius: 0.25em;
   -o-border-radius: 0.25em;
   border-radius: 0.25em;
+  letter-spacing: 1px;
 }
-/* line 61, ../scss/servers.scss */
+/* line 62, ../scss/servers.scss */
 .server .details .joinServer:hover {
   text-decoration: none;
   background: #5b8ec8;
 }
-/* line 67, ../scss/servers.scss */
+/* line 68, ../scss/servers.scss */
 .server .details dl {
   font-size: 0.8em;
   margin: 0;
 }
-/* line 71, ../scss/servers.scss */
+/* line 72, ../scss/servers.scss */
 .server .details dl dt {
   font-weight: normal;
   color: #888;
@@ -89,13 +90,13 @@
   clear: left;
   padding: 0.25em 0;
 }
-/* line 81, ../scss/servers.scss */
+/* line 82, ../scss/servers.scss */
 .server .details dl dd {
   display: inline-block;
   padding: 0.25em 0;
   float: left;
 }
-/* line 87, ../scss/servers.scss */
+/* line 88, ../scss/servers.scss */
 .server .details dl:after {
   content: '';
   display: block;
