--- a/media/css/staff.css
+++ b/media/css/staff.css
@@ -15,13 +15,13 @@
 }
 /* line 8, ../scss/staff.scss */
 .staffRoster .user {
-  height: 94px;
+  min-height: 94px;
   border: 4px solid #fff;
 }
 /* line 12, ../scss/staff.scss */
 .staffRoster .user ~ .user {
   border-top: none;
-  height: 90px;
+  min-height: 90px;
 }
 /* line 18, ../scss/staff.scss */
 .staffRoster .user a.steamLink:hover {
@@ -29,9 +29,8 @@
 }
 /* line 23, ../scss/staff.scss */
 .staffRoster .user .avatar {
-  height: 86px;
+  min-height: 86px;
   width: 86px;
-  border-right: 4px solid #fff;
   vertical-align: top;
 }
 /* line 30, ../scss/staff.scss */
@@ -42,7 +41,6 @@
   text-align: center;
   float: right;
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFAQMAAAC3obSmAAAABlBMVEXw7/Hz8/b4ZqnEAAAAGklEQVR4XgXAgRAAAAwCwEcIYSjDC7sT51UGBGIBCXVzp3AAAAAASUVORK5CYII=");
-  border-left: 4px solid #fff;
   color: #9c9c9c;
   font-family: 'Arvil Sans', Arial;
   font-size: 1.6em;
@@ -62,30 +60,34 @@
 .staffRoster .user .info {
   display: inline-block;
   color: #626363;
-  width: 600px;
-  padding: 5px 9px;
+  width: 622px;
+  padding: 5px 9px 0 9px;
+  min-height: 86px;
+  border-left: 4px solid #fff;
+  border-right: 4px solid #fff;
 }
-/* line 57, ../scss/staff.scss */
+/* line 60, ../scss/staff.scss */
 .staffRoster .user .info h3 {
   margin: 0 0 2px 0;
   font-family: 'Arvil Sans', Arial;
   letter-spacing: 1px;
   font-size: 2em;
 }
-/* line 63, ../scss/staff.scss */
+/* line 66, ../scss/staff.scss */
 .staffRoster .user .info h3 a {
   color: #3c648e;
   font-size: 1.1em;
   vertical-align: middle;
 }
-/* line 70, ../scss/staff.scss */
+/* line 73, ../scss/staff.scss */
 .staffRoster .user .info h3 .job:before {
   content: ' |  ';
   color: #ccc;
   font-weight: normal;
   white-space: pre;
 }
-/* line 79, ../scss/staff.scss */
+/* line 82, ../scss/staff.scss */
 .staffRoster .user .info p {
   color: #9b9b9b;
+  margin: 0;
 }
