--- a/media/scss/staff.scss
+++ b/media/scss/staff.scss
@@ -6,12 +6,12 @@
   margin: 1em 0 0 0;
 
   .user {
-    height: 94px;
+    min-height: 94px;
     border: 4px solid #fff;
 
     & ~ .user {
       border-top: none;
-      height: 90px;
+      min-height: 90px;
     }
 
     a.steamLink {
@@ -21,9 +21,9 @@
     }
 
     .avatar {
-      height: 86px;
+      min-height: 86px;
       width: 86px;
-      border-right: 4px solid #fff;
+      //border-right: 4px solid #fff;
       vertical-align: top;
     }
 
@@ -34,7 +34,7 @@
       text-align: center;
       float: right;
       background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFAQMAAAC3obSmAAAABlBMVEXw7/Hz8/b4ZqnEAAAAGklEQVR4XgXAgRAAAAwCwEcIYSjDC7sT51UGBGIBCXVzp3AAAAAASUVORK5CYII=');
-      border-left: 4px solid #fff;
+      //border-left: 4px solid #fff;
       color: #9c9c9c;
       font-family: 'Arvil Sans', Arial;
       font-size: 1.6em;
@@ -51,8 +51,11 @@
     .info {
       display: inline-block;
       color: #626363;
-      width: 600px;
-      padding: 5px 9px;
+      width: 622px;
+      padding: 5px 9px 0 9px;
+      min-height: 86px;
+      border-left: 4px solid #fff;
+      border-right: 4px solid #fff;
 
       h3 {
         margin: 0 0 2px 0;
@@ -78,6 +81,7 @@
 
       p {
         color: #9b9b9b;
+        margin: 0;
       }
     }
   }
