--- a/media/scss/_custom.scss
+++ b/media/scss/_custom.scss
@@ -1,6 +1,8 @@
 // pooooop
 // put color variables and stuff like that here
 
+$contentPadding: 36px;
+
 $borderGrey: #dfdfdf;
 $borderGray: $borderGrey;
 
