--- a/media/scss/blog.scss
+++ b/media/scss/blog.scss
@@ -7,6 +7,10 @@
     padding: 1em 0;
     border-bottom: 2px solid #ddd;
 
+    img {
+      max-width: 100%;
+    }
+
     h3 {
       display: inline-block;
       float: left;
