--- a/media/css/header.css
+++ b/media/css/header.css
@@ -15,11 +15,11 @@ h1 {
   font-family: 'Arvil Sans', Arial;
   background: #3d658f;
   padding: 25px 75px;
-  -webkit-border-radius: 0 0 0.25em 0.25em;
-  -moz-border-radius: 0 0 0.25em 0.25em;
-  -ms-border-radius: 0 0 0.25em 0.25em;
-  -o-border-radius: 0 0 0.25em 0.25em;
-  border-radius: 0 0 0.25em 0.25em;
+  -webkit-border-radius: 0 0 0.11em 0.11em;
+  -moz-border-radius: 0 0 0.11em 0.11em;
+  -ms-border-radius: 0 0 0.11em 0.11em;
+  -o-border-radius: 0 0 0.11em 0.11em;
+  border-radius: 0 0 0.11em 0.11em;
 }
 /* line 16, ../scss/header.scss */
 h1 strong {
@@ -99,7 +99,7 @@ ul.topNav li a {
   color: #fff;
   text-decoration: none;
   font-family: Arial;
-  line-height: 38px;
+  line-height: 46px;
 }
 /* line 92, ../scss/header.scss */
 ul.topNav li.selected a {
@@ -156,7 +156,7 @@ ul.breadcrumbs {
   display: inline-block;
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0 0 0.5em 0;
 }
 /* line 143, ../scss/header.scss */
 ul.breadcrumbs li {
