--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -18,7 +18,7 @@ body {
     content: '';
     display: block;
     background: #3d658f;
-    height: 38px;
+    height: 46px;
     position: absolute;
     top: 0;
     left: 0;
@@ -35,7 +35,7 @@ body {
 .content {
   background: #fff;
   border: 1px solid $borderGray;
-  padding: 16px;
+  padding: $contentPadding;
   //@include box-shadow(0 0 1em rgba(0,0,0,0.125));
   @include border-radius(0 0.5em 0 0);
 }
@@ -46,7 +46,7 @@ body {
 
 h2 {
   padding: 0;
-  margin: 0;
+  margin: 0 0 0.5em 0;
 
   a {
     color: #767676;
@@ -74,6 +74,11 @@ ul.pageNav {
     a {
       display: inline-block;
       background: #fff;
+
+      &:hover {
+        background: #e5e5e5;
+        text-decoration: none;
+      }
     }
 
     a, span {
@@ -274,6 +279,6 @@ table {
   width: 100%;
 
   td {
-    text-align: center;
+    //text-align: center;
   }
 }
