-fixed avatar bug -fixed regular rank -various stylin

--- a/media/css/blog.css
+++ b/media/css/blog.css
@@ -7,7 +7,7 @@
 */
 /* line 3, ../scss/blog.scss */
 .blog {
-  padding: 32px;
+  padding: 0;
 }
 /* line 6, ../scss/blog.scss */
 .blog .blogPost {
