steam login pic

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -444,3 +444,14 @@ a[target="_blank"]:after {
   content: " " url("../images/bgWhite.png");
   white-space: pre;
 }
+
+/* line 292, ../scss/main.scss */
+.login {
+  width: 154px;
+  height: 23px;
+  background: url(../images/steam_signin.png) no-repeat;
+  display: inline-block;
+  border: none;
+  font-size: 1px;
+  color: transparent;
+}
