fixed tags moving content around

--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -121,6 +121,7 @@ $tags: (vip, mod, admin, dev, super, owner);
     display: inline-block;
     white-space: pre;
     vertical-align: middle;
+    height: 16px;
     // todo add background images instead of content text
   }
 }
