--- a/media/css/main.css
+++ b/media/css/main.css
@@ -466,11 +466,11 @@ table {
 
 /* line 306, ../scss/main.scss */
 a[target="_blank"]:after {
-  content: " " url("../images/bgWhite.png");
+  content: " " url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAD1BMVEX///////////////////+Rd1MVAAAABHRSTlMAaeRqY+AomwAAADNJREFUeF4lxIEJACAMBLErdACRjuIAX/n9Z7IghEDYhlwkcGe7Z+Xac4cLnVKjkOCzLR6tNQaTLNDT1wAAAABJRU5ErkJggg==");
   white-space: pre;
 }
 
-/* line 312, ../scss/main.scss */
+/* line 311, ../scss/main.scss */
 .login {
   width: 154px;
   height: 23px;
@@ -481,7 +481,7 @@ a[target="_blank"]:after {
   color: transparent;
 }
 
-/* line 322, ../scss/main.scss */
+/* line 321, ../scss/main.scss */
 .curse {
   font-weight: bold;
   -webkit-filter: blur(2px);
